--- a/frontend/src/app/components/profile/profile.component.css
+++ b/frontend/src/app/components/profile/profile.component.css
@@ -24,17 +24,29 @@ mat-drawer {
 
 .sidenav-links a,
 .sidenav-links button {
-  width: 100%;
-  text-align: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 3px;
   text-decoration: none;
-  padding: 10px;
   color: #000;
   background: none;
   border: none;
-  border-radius: 10px;
-  width: 200px;
+  border-radius: 5px;
 }
-
+.sidenav-links a span,
+.sidenav-links button span {
+  font-size: 12px;
+  color: gray;
+  margin: 0px;
+}
+.sidenav-links a fa-icon,
+.sidenav-links button fa-icon {
+  color: rgb(0, 0, 119);
+  font-size: 10px;
+  margin: 0px;
+}
 .sidenav-links a:hover,
 .sidenav-links button:hover {
   background-color: #e7e7e7;
@@ -54,10 +66,6 @@ mat-drawer {
 
 .home-main-page {
   padding: 5px 30px;
-}
-
-fa-icon {
-  color: #000;
 }
 
 .info-card {
@@ -151,5 +159,11 @@ full-calendar {
   }
   #search-form {
     width: 40%;
+  }
+}
+
+@media screen and (max-width: 635px) {
+  .breadcrumb {
+    display: none;
   }
 }
