--- a/frontend/src/app/components/profile/user-settings/user-settings.component.css
+++ b/frontend/src/app/components/profile/user-settings/user-settings.component.css
@@ -29,9 +29,7 @@
   gap: 10px;
 }
 
-.outline-btn,
-.filled-btn,
-#delete-btn {
+.filled-btn {
   border: 2px solid #6366f1;
   border-radius: 8px;
   padding: 5px;
@@ -39,28 +37,14 @@
   transition: 0.5s ease;
   cursor: pointer;
 }
-.outline-btn {
-  background-color: #fff;
-}
 
 .filled-btn {
   background-color: #6366f1;
   color: #fff;
 }
-.outline-btn:hover {
-  background-color: rgba(208, 208, 247, 0.667);
-}
+
 .filled-btn:hover {
   background-color: #4245ed;
-}
-
-#delete-btn {
-  border: 1px solid red !important;
-  background-color: #fff;
-  color: red !important;
-}
-#delete-btn:hover {
-  background-color: rgb(255, 217, 217);
 }
 
 #data-setting form {
