--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -54,6 +54,33 @@ body {
   background-color: #71748f;
 }
 
+.outline-btn {
+  border: 2px solid #6366f1;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 5px;
+  font-family: nunito;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+.outline-btn:hover {
+  background-color: rgba(208, 208, 247, 0.667);
+}
+
+.delete-btn {
+  border-radius: 8px;
+  padding: 5px;
+  font-family: nunito;
+  transition: 0.5s ease;
+  cursor: pointer;
+  border: 1px solid red !important;
+  background-color: #fff;
+  color: red !important;
+}
+.delete-btn:hover {
+  background-color: rgb(255, 217, 217);
+}
+
 body.modal-open section {
   -webkit-filter: blur(10px);
   -moz-filter: blur(10px);
