--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-  <p class="text-center">Copyright © Vedis 2024. All rights reserved.</p>
+  <p class="text-center m-0">© 2024 Vedis</p>
 
   <div id="links" class="d-flex gap-1">
     <a routerLink="">Політика конфедеційності</a>
