--- a/frontend/src/app/components/profile/applications/applications.component.css
+++ b/frontend/src/app/components/profile/applications/applications.component.css
@@ -30,20 +30,22 @@
   background-color: #ededed;
 }
 
-form {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
-
-select {
+#delete-btn {
+  border: 1px solid red !important;
+  background-color: #fff;
+  color: red !important;
+  border-radius: 8px;
+  padding: 5px;
+  font-family: nunito;
+  transition: 0.5s ease;
   cursor: pointer;
-  border: 2px solid var(--new-blue);
-  border-radius: 15px;
+}
+#delete-btn:hover {
+  background-color: rgb(255, 217, 217);
 }
 
-@media screen and (max-width: 635px) {
-  table {
+@media screen and (max-width: 610px){
+  thead {
     font-size: 12px;
   }
 }
