--- a/frontend/src/app/components/profile/class-overview/new-class/new-class.component.html
+++ b/frontend/src/app/components/profile/class-overview/new-class/new-class.component.html
@@ -102,3 +102,9 @@
     </div>
   </form>
 </div>
+<button
+  mat-dialog-close
+  type="button"
+  class="btn-close closeBtnModal"
+  aria-label="Close"
+></button>
