--- a/frontend/src/app/components/profile/tasks/new-task/new-task.component.html
+++ b/frontend/src/app/components/profile/tasks/new-task/new-task.component.html
@@ -63,3 +63,9 @@
     </ng-template>
   </div>
 </div>
+<button
+  mat-dialog-close
+  type="button"
+  class="btn-close closeBtnModal"
+  aria-label="Close"
+></button>
