--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -1,5 +1,5 @@
 #wrapper {
-  padding: 15px 15px 5px 15px;
+  padding: 15px 15px 5px 5px;
   background-color: var(--dark-blue);
   width: 100%;
   display: flex;
@@ -12,7 +12,7 @@
 a {
   color: #fff;
   text-decoration: none;
-  transition: .7s;
+  transition: 0.7s;
 }
 
 a:hover {
@@ -25,17 +25,16 @@ a:hover {
   gap: 10px;
 }
 
-@media screen and (max-width: 847px) {
+@media screen and (max-width: 639px) {
   #wrapper {
-    gap: 20px;
-    flex-direction: column-reverse;
+    font-size: 10px;
     align-items: center;
-    font-size: 15px;
   }
 
   #links {
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column-reverse;
+    justify-content: flex-end;    
+    text-align: end;
   }
 
   span {
