--- a/frontend/src/app/components/profile/class-overview/new-class/new-class.component.css
+++ b/frontend/src/app/components/profile/class-overview/new-class/new-class.component.css
@@ -1,20 +1,9 @@
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 30px;
-}
-
 .class-card {
   padding: 10px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 20px;
-  box-shadow: var(--shadow);
-  padding: 10px 30px 30px 30px;
 }
 
 form {
@@ -31,7 +20,7 @@ h5 {
 
 fieldset {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 30px;
   margin: 10px;
@@ -48,28 +37,6 @@ fieldset label {
   border: 1px solid red;
 }
 
-st-editor {
-  width: 100%;
-  padding-left: 5px;
-}
-
-::ng-deep st-button,
-::ng-deep st-color-picker {
-  font-size: 10px !important;
-}
-
-::ng-deep .st-toolbar {
-  padding: 0;
-}
-
-::ng-deep st-separator {
-  display: none;
-}
-
-::ng-deep .st-area {
-  min-height: 100px !important;
-}
-
 .outline-btn {
   border: 2px solid #1f8e00;
   border-radius: 8px;
@@ -82,4 +49,16 @@ st-editor {
 }
 .outline-btn:hover {
   background-color: #2c8613;
+}
+
+.teacher-hint {
+  color: black;
+  font-style: oblique;
+  font-weight: 600;
+}
+
+.closeBtnModal {
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
