--- a/frontend/src/app/components/profile/dictionary/dictionary.component.html
+++ b/frontend/src/app/components/profile/dictionary/dictionary.component.html
@@ -1,153 +1,147 @@
-<div class="pt-4 table-responsive" *ngIf="isUserTeacher; else studentSection">
-  <table class="table table-bordered">
-    <thead>
-      <tr style="background-color: #ededed">
-        <th
-          colspan="4"
-          style="text-align: start; border: none; vertical-align: middle"
-        >
-          <h4>Словник 📒</h4>
-        </th>
-        <th
-          colspan="1"
-          style="display: flex; justify-content: flex-end; border: none"
-        >
-          <form
-            [formGroup]="wordSearchForm"
-            id="search-form"
-            style="
-              display: flex;
-              flex-direction: column;
-              gap: 10px;
-              width: 250px;
-            "
-          >
-            <fieldset>
-              <select
-                style="border: 2px solid var(--new-blue); border-radius: 15px;"
-                formControlName="studentId"
-                id="student-select"
-                class="form-select"
+<div class="main-wrapper">
+  <div class="heading">
+    <p><b>Словник</b></p>
+  </div>
+  <div class="w-100 px-3 mb-5">
+    <div
+      class="table-responsive w-100"
+      *ngIf="isUserTeacher; else studentSection"
+    >
+      <div class="w-100 mb-3 p-2">
+        <form [formGroup]="wordSearchForm" id="search-form">
+          <fieldset>
+            <select
+              style="border: 2px solid var(--new-blue); border-radius: 15px"
+              formControlName="studentId"
+              id="student-select"
+              class="form-select"
+            >
+              <option selected disabled value="default">Вибрати учня</option>
+              <option
+                *ngFor="let s of dictionary$ | async"
+                value="{{ s.studentId }}"
               >
-                <option selected disabled value="default">Вибрати учня</option>
-                <option
-                  *ngFor="let s of dictionary$ | async"
-                  value="{{ s.studentId }}"
-                >
-                  {{ s.name }}
-                </option>
-              </select>
-            </fieldset>
+                {{ s.name }}
+              </option>
+            </select>
+          </fieldset>
+
+          <fieldset>
+            <button (click)="openDialog()" class="outline-btn">
+              <fa-icon [icon]="icons.add"></fa-icon> Додати слово
+            </button>
+          </fieldset>
+
+          <fieldset>
             <input
               type="search"
               formControlName="wordRegex"
               list="pages"
               name="search"
               id="search-input"
-              placeholder="Знайти слово"
+              class="form-control"
+              placeholder="Знайти"
             />
-          </form>
-        </th>
-      </tr>
-    </thead>
-    <thead>
-      <tr>
-        <th scope="col">Вивчити до</th>
-        <th scope="col">Слово</th>
-        <th scope="col">Транскрипція</th>
-        <th scope="col">Переклад</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let w of filteredDictionary$ | async">
-        <td>{{ parseTimestamp(w.dueDate) }}</td>
-        <td>{{ w.word }}</td>
-        <td>{{ w.transcription }}</td>
-        <td>{{ w.translation }}</td>
-        <td>
-          <button
-            data-bs-toggle="dropdown"
-            mat-icon-button
-            aria-label="Example icon button with a vertical three dot icon"
-          >
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <div class="dropdown">
-            <ul class="dropdown-menu">
-              <li>
-                <button
-                  (click)="deleteWord(w.id)"
-                  type="button"
-                  class="dropdown-item"
-                >
-                  Видалити
-                </button>
-              </li>
-            </ul>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+          </fieldset>
+        </form>
+      </div>
+      <table class="table text-center">
+        <thead>
+          <tr>
+            <th scope="col">Вивчити до</th>
+            <th scope="col">Слово</th>
+            <th scope="col">Транскрипція</th>
+            <th scope="col">Переклад</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let w of filteredDictionary$ | async">
+            <td>{{ parseTimestamp(w.dueDate) }}</td>
+            <td>{{ w.word }}</td>
+            <td>{{ w.transcription }}</td>
+            <td>{{ w.translation }}</td>
+            <td>
+              <button
+                data-bs-toggle="dropdown"
+                mat-icon-button
+                aria-label="Example icon button with a vertical three dot icon"
+              >
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <div class="dropdown">
+                <ul class="dropdown-menu">
+                  <li>
+                    <button
+                      (click)="deleteWord(w.id)"
+                      type="button"
+                      class="dropdown-item"
+                    >
+                      Видалити
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-<ng-template #studentSection>
-  <div style="padding: 50px">
-    <table class="table table-bordered">
-      <thead>
-        <tr style="background-color: #ededed">
-          <th colspan="4" style="text-align: start; border: none">
-            <h3>Словник 📒</h3>
-          </th>
-          <th colspan="1" style="text-align: end; border: none">
-            <form [formGroup]="wordSearchForm" id="search-form">
+    <ng-template #studentSection>
+      <div class="table-responsive">
+        <div class="mb-3 p-2">
+          <form [formGroup]="wordSearchForm" id="search-form">
+            <fieldset>
               <input
                 formControlName="wordRegex"
                 list="pages"
                 name="search"
                 id="search-input"
-                placeholder="Знайти слово"
+                class="form-control"
+                placeholder="Знайти"
               />
-            </form>
-          </th>
-        </tr>
-      </thead>
-      <thead>
-        <tr>
-          <th scope="col">Вивчити до</th>
-          <th scope="col">Слово</th>
-          <th scope="col">Транскрипція</th>
-          <th scope="col">Переклад</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngIf="(dictionary$ | async)?.length == 0">
-          <td colspan="5" class="text-center">
-            Ваш вчитель поки що не додав нових слів 🥳
-          </td>
-        </tr>
-        <tr *ngFor="let item of filteredDictionary$ | async; index as i">
-          <td>{{ parseTimestamp(item.dueDate) }}</td>
-          <td>{{ item.word }}</td>
-          <td>{{ item.transcription }}</td>
-          <td class="hidden-text" id="translation-{{ i }}">
-            <p class="m-0">
-              {{ item.translation }}
-            </p>
-          </td>
-          <td class="text-center">
-            <button
-              (click)="hideTranslation(i)"
-              type="button"
-              class="dropdown-item"
-            >
-              <i id="show-icon-{{ i }}" class="bi bi-eye-fill"></i>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+            </fieldset>
+          </form>
+        </div>
+        <table class="table text-center">
+          <thead>
+            <tr>
+              <th scope="col">Вивчити до</th>
+              <th scope="col">Слово</th>
+              <th scope="col">Транскрипція</th>
+              <th scope="col">Переклад</th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngIf="(dictionary$ | async)?.length == 0">
+              <td colspan="5" class="text-center">
+                Ваш вчитель поки що не додав нових слів 🥳
+              </td>
+            </tr>
+            <tr *ngFor="let item of filteredDictionary$ | async; index as i">
+              <td>{{ parseTimestamp(item.dueDate) }}</td>
+              <td>{{ item.word }}</td>
+              <td>{{ item.transcription }}</td>
+              <td class="hidden-text" id="translation-{{ i }}">
+                <p class="m-0">
+                  {{ item.translation }}
+                </p>
+              </td>
+              <td class="text-center">
+                <button
+                  (click)="hideTranslation(i)"
+                  type="button"
+                  class="dropdown-item"
+                >
+                  <i id="show-icon-{{ i }}" class="bi bi-eye-fill"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </ng-template>
   </div>
-</ng-template>
+</div>
