--- a/frontend/src/app/components/profile/dictionary/new-word/new-word.component.css
+++ b/frontend/src/app/components/profile/dictionary/new-word/new-word.component.css
@@ -1,19 +1,8 @@
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 30px;
-}
-
 .class-card {
-  padding: 10px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 20px;
-  box-shadow: var(--shadow);
   padding: 10px 30px 30px 30px;
 }
 
@@ -60,4 +49,10 @@ fieldset label {
 }
 .outline-btn:hover {
   background-color: #2c8613;
+}
+
+.closeBtnModal {
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
