--- a/frontend/src/app/components/profile/tasks/new-task/new-task.component.css
+++ b/frontend/src/app/components/profile/tasks/new-task/new-task.component.css
@@ -1,21 +1,9 @@
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-
 .class-card {
   padding: 10px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 20px;
-  box-shadow: var(--shadow);
-  padding: 10px 30px 30px 30px;
-  border: 2px solid var(--dark-blue);
 }
 
 form {
@@ -32,7 +20,7 @@ h5 {
 
 fieldset {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   gap: 30px;
   margin: 10px;
@@ -49,6 +37,28 @@ fieldset label {
   border: 1px solid red;
 }
 
+st-editor {
+  width: 100%;
+  padding-left: 5px;
+}
+
+::ng-deep st-button,
+::ng-deep st-color-picker {
+  font-size: 10px !important;
+}
+
+::ng-deep .st-toolbar {
+  padding: 0;
+}
+
+::ng-deep st-separator {
+  display: none;
+}
+
+::ng-deep .st-area {
+  min-height: 100px !important;
+}
+
 .outline-btn {
   border: 2px solid #1f8e00;
   border-radius: 8px;
@@ -63,24 +73,8 @@ fieldset label {
   background-color: #2c8613;
 }
 
-.teacher-hint {
-  color: black;
-  font-style: oblique;
-  font-weight: 600
-}
-
-@media screen and (max-width: 460px) {
-  :host{
-    padding: 0;
-  }
-  
-  .class-card {
-    padding: 5px;
-    width: 100%;
-  }
-
-  fieldset {
-    flex-direction: column;
-    gap: 0px;
-  }
+.closeBtnModal {
+  position: absolute;
+  top: 2px;
+  right: 2px;
 }
