--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -5,7 +5,9 @@
     class="alert alert-danger alert-dismissible text-center"
     role="alert"
   >
-    <div><span>{{ errorMsg }}</span></div>
+    <div>
+      <span>{{ errorMsg }}</span>
+    </div>
     <button
       (click)="showErrorMsg = !showErrorMsg"
       type="button"
@@ -78,7 +80,7 @@
         </div>
       </fieldset>
 
-      <div class="w-100 d-flex justify-content-center">
+      <div>
         <button
           *ngIf="!awaitingResponse; else loadingBtn"
           [disabled]="
@@ -98,6 +100,9 @@
             Зачекайте...
           </button>
         </ng-template>
+        <div class="mt-3">
+          <a routerLink="/recover">Забули пароль?</a>
+        </div>
       </div>
     </form>
 
