--- a/frontend/src/app/components/profile/students/students.component.css
+++ b/frontend/src/app/components/profile/students/students.component.css
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
-  background-image: url(../../../../../assets/profile/heading.svg);
+  background-image: url(../../../../assets/profile/heading.svg);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
