--- a/frontend/src/app/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/components/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="form-wrapper">
+  <div class="form-wrapper" *ngIf="!isEmailSent; else confirmationDialog">
     <form [formGroup]="recoverForm" (ngSubmit)="onSubmit()">
       <legend>Вкажіть вашу пошту</legend>
 
@@ -54,6 +54,14 @@
       </div>
     </form>
 
-    <img src="../../../assets/recover/recover.svg" />
+    <img src="../../../assets/forgot-pwd/recover.svg" />
   </div>
+  <ng-template #confirmationDialog>
+    <div class="form-wrapper">
+      <h4 class="text-center">
+        На ваш Email надіслано лист із посиланням для відновлення доступу
+      </h4>
+      <img src="../../../assets/forgot-pwd/email-sent.svg" />
+    </div>
+  </ng-template>
 </section>
