--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -101,7 +101,7 @@
           </button>
         </ng-template>
         <div class="mt-3">
-          <a routerLink="/recover">Забули пароль?</a>
+          <a routerLink="/forgot/password">Забули пароль?</a>
         </div>
       </div>
     </form>
