--- a/frontend/src/app/components/landing/level-check/level-check.component.html
+++ b/frontend/src/app/components/landing/level-check/level-check.component.html
@@ -1,4 +1,4 @@
-<section class="section-wrapper py-3">
+<section id="lang-lvl-wrapper" class="section-wrapper py-3">
   <div
     id="smt"
     style="display: flex; flex-direction: column; align-items: center"
@@ -47,7 +47,7 @@
         </h3>
         <div id="modal-content">
           <a
-            routerLink="english-test"
+            routerLink="test/english"
             data-bs-dismiss="modal"
             class="modal-choice"
             type="button"
@@ -61,7 +61,7 @@
             />
           </a>
           <a
-            routerLink="german-test"
+            routerLink="test/german"
             data-bs-dismiss="modal"
             class="modal-choice"
             type="button"
