--- a/frontend/src/app/components/profile/profile.component.css
+++ b/frontend/src/app/components/profile/profile.component.css
@@ -107,7 +107,7 @@ full-calendar {
 
 #avatar-and-greeting {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   gap: 10px;
 }
 
