--- a/frontend/src/app/components/landing-tests/english-test/english-test.component.css
+++ b/frontend/src/app/components/landing-tests/english-test/english-test.component.css
@@ -1,6 +1,14 @@
+:host {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 h3 {
   font-family: montserrat-bold;
-  color: #000D83;
+  color: #000d83;
   text-align: center;
 }
 
@@ -46,7 +54,7 @@ p {
   flex-direction: column;
   align-items: center;
   gap: 15px;
-  background-color: #F2EBFF;
+  background-color: #f2ebff;
 }
 
 .test-card p {
@@ -56,7 +64,7 @@ p {
 
 .icon {
   font-size: 40px;
-  color: #000D83;
+  color: #000d83;
   margin: 0;
 }
 
@@ -82,6 +90,60 @@ p {
 .trophy-img {
   height: auto;
   width: 130px;
+}
+
+section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+}
+
+.result-wrapper {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid black;
+  border-radius: 10px;
+  box-shadow: var(--shadow);
+}
+
+.result-details {
+  width: 45%;
+}
+
+.main-result {
+  font-family: montserrat-bold;
+  font-size: 25px;
+}
+.secondary-description {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 16px;
+  color: rgb(79, 79, 79);
+}
+
+.result-vis {
+  width: 50%;
+  height: auto;
+}
+
+@media screen and (max-width: 1100px) {
+  .result-wrapper {
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .result-details {
+    width: 100%;
+  }
+  .result-vis {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 930px) {
